--- a/home/index.html
+++ b/home/index.html
@@ -43,9 +43,9 @@
                         BulletTech
                     </h1>
                     <div class="subheading mb-5">
-                        Shanghai · China · <a href="mailto:name@email.com">BulletTech2021@163.com</a>
+                        Nanning · China · <a href="mailto:name@email.com">BulletTech2021@163.com</a>
                     </div>
-                    <p class="lead mb-5">所有内容都有益身心健康，欢迎每天品尝。欢迎点击下列图标查看我们在不同平台的服务和内容！</p>
+                    <p class="lead mb-5">罗宁琪</p>
                     <div class="social-icons">
                         <a class="social-icon" href="http://bullettech.cn/"><i class="fas fa-rocket"></i></a>
                         <a class="social-icon" href="https://bullettech.github.io/BulletTech/"><i class="fab fa-github"></i></a>
@@ -97,17 +97,17 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">清华大学</h3>
-                            <div class="subheading mb-3">工学硕士</div>
-                            <div>电子信息工程</div>
+                            <h3 class="mb-0">帝国理工大学</h3>
+                            <div class="subheading mb-3">理学硕士</div>
+                            <div>计算机技术与应用</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2015年9月 - 2018年3月</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">清华大学</h3>
-                            <div class="subheading mb-3">工学学士</div>
-                            <div>电子信息工程</div>
+                            <h3 class="mb-0">南开大学</h3>
+                            <div class="subheading mb-3">管理学学士</div>
+                            <div>财务管理&数据科学</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2011年9月 - 2015年6月</span></div>
                     </div>
@@ -156,7 +156,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>摄影、篮球、阅读、编程</p>
+                    <p>唱/跳/rap/篮球</p>
                 </div>
             </section>
             <hr class="m-0" />
