--- a/home/index.html
+++ b/home/index.html
@@ -40,7 +40,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        BulletTech
+                        Nikki Luo
                     </h1>
                     <div class="subheading mb-5">
                         Nanning · China · <a href="mailto:name@email.com">BulletTech2021@163.com</a>
