--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - BulletTech</title>
+        <title>Resume - Nikki Luo</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -43,9 +43,9 @@
                         Nikki Luo
                     </h1>
                     <div class="subheading mb-5">
-                        Nanning · China · <a href="mailto:name@email.com">BulletTech2021@163.com</a>
+                        Nanning · China · <a href="mailto:name@email.com">16622808722@163.com</a>
                     </div>
-                    <p class="lead mb-5">罗宁琪</p>
+                    <p class="lead mb-5">啥都不会的菜鸟</p>
                     <div class="social-icons">
                         <a class="social-icon" href="http://bullettech.cn/"><i class="fas fa-rocket"></i></a>
                         <a class="social-icon" href="https://bullettech.github.io/BulletTech/"><i class="fab fa-github"></i></a>
